--- a/pom.xml
+++ b/pom.xml
@@ -10,44 +10,51 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<logback-classic.version>1.5.5</logback-classic.version>
+		<slf4j-api.version>2.0.13</slf4j-api.version>
+		<json.version>20240303</json.version>
+		<commons-lang3.verion>3.14.0</commons-lang3.verion>
+		<bcprov-jdk18on.version>1.78</bcprov-jdk18on.version>
+		<jakarta.servlet-api.version>6.1.0-M2</jakarta.servlet-api.version>
+		<jetty-all.version>11.0.0.beta1</jetty-all.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-all</artifactId>
-			<version>11.0.0.beta1</version>
+			<version>${jetty-all.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
-			<version>6.1.0-M2</version>
+			<version>${jakarta.servlet-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk18on</artifactId>
-			<version>1.77</version>
+			<version>${bcprov-jdk18on.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.14.0</version>
+			<version>${commons-lang3.verion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20240303</version>
+			<version>${json.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.12</version>
+			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.5.3</version>
+			<version>${logback-classic.version}</version>
 		</dependency>
 	</dependencies>
 
