--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 target/classes/META-INF/MANIFEST.MF
 *.properties
 *.xml
+target/heanbian-jrebel-license-1.0-SNAPSHOT.jar
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
