--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<json.version>20240303</json.version>
 		<commons-lang3.verion>3.14.0</commons-lang3.verion>
 		<bcprov-jdk18on.version>1.78.1</bcprov-jdk18on.version>
-		<jakarta.servlet-api.version>6.1.0-M2</jakarta.servlet-api.version>
+		<jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
 		<jetty-all.version>11.0.0.beta1</jetty-all.version>
 	</properties>
 
@@ -63,7 +63,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.4.1</version>
+				<version>3.4.2</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -78,7 +78,7 @@
 				<?m2e ignore?>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.6.1</version>
+				<version>3.7.0</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
