--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-
+*.prefs
+lib/
+target/
 .classpath
 .DS_Store
+.flattened-pom.xml
+.factorypath
 .project
-*.prefs
-*.class
-target/classes/META-INF/MANIFEST.MF
-*.properties
-*.xml
-target/heanbian-jrebel-license-1.0-SNAPSHOT.jar
-target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+.rebel-remote.xml
+.rebel-remote.xml.bak
+.rebel.xml.bak
+.settings
+.springBeans
+.sts4-cache
+.apt_generated
+logs
+*.log
+bin/
+classes/
+cached-antora-playbook.yml
+/dist/
+.vscode/
+.gradle
+build/
